--- a/data_process(scraper).ipynb
+++ b/data_process(scraper).ipynb
@@ -28,61 +28,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importamos Datos Privados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2446 entries, 0 to 2445\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column               Non-Null Count  Dtype  \n",
-      "---  ------               --------------  -----  \n",
-      " 0   id                   2446 non-null   int64  \n",
-      " 1   price                2446 non-null   int64  \n",
-      " 2   currency             2446 non-null   object \n",
-      " 3   condition            2446 non-null   object \n",
-      " 4   Marca                2446 non-null   object \n",
-      " 5   Puertas              2446 non-null   int64  \n",
-      " 6   Tipo de combustible  2446 non-null   object \n",
-      " 7   Kilómetros           2238 non-null   float64\n",
-      " 8   Modelo               2446 non-null   object \n",
-      " 9   Versión              2446 non-null   object \n",
-      " 10  Año                  2446 non-null   int64  \n",
-      " 11  adressstate_name     2446 non-null   object \n",
-      " 12  adresscity_name      2446 non-null   object \n",
-      " 13  Motor                2446 non-null   float64\n",
-      " 14  Transmisión          2446 non-null   object \n",
-      "dtypes: float64(2), int64(4), object(9)\n",
-      "memory usage: 286.8+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Levanto la base de datos privados con la que trabajeremos\n",
-    "df_k = pd.read_csv('base_kavak.csv', sep=\";\")\n",
-    "\n",
-    "# Observamos nuestro dataset\n",
-    "df_k.info()\n",
-    "df_k.shape\n",
-    "# (2532, 15)\n",
-    "\n",
-    "# Armo una lista de los modelos disponibles en el dataset\n",
-    "modelos = df_k['Modelo'].unique().tolist()\n",
-    "# 146 modelos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Importamos Datos Públicos"
    ]
   },
@@ -146,7 +91,7 @@
    ],
    "source": [
     "# Levanto la base de datos públicos con la que trabajeremos\n",
-    "df = pd.read_csv('data_publications.csv', sep=\";\")\n",
+    "df = pd.read_csv('data_scaper.csv', sep=\";\")\n",
     "\n",
     "# Observamos nuestro dataset\n",
     "df.info()\n",
