--- a/modelo_RegresionLineal (api).ipynb
+++ b/modelo_RegresionLineal (api).ipynb
@@ -92,14 +92,8 @@
     "datos_meli = pd.read_excel('data_ready_to_model_api_simple.xlsx')\n",
     "datos_meli['type'] = 'meli'\n",
     "\n",
-    "datos_kavak = pd.read_excel('base_kavak.xlsx')\n",
-    "datos_kavak['type'] = 'kavak' \n",
-    "\n",
-    "# Edito el motor a número\n",
-    "datos_kavak['Motor'] = datos_kavak['Motor'].astype(str)\n",
-    "\n",
     "# Uno los DF\n",
-    "frames = [datos_meli, datos_kavak]\n",
+    "frames = [datos_meli, datos_privados]\n",
     "datos = pd.concat(frames)\n",
     "\n",
     "# Los paso por One Hot Encoder\n",
@@ -107,7 +101,6 @@
     "\n",
     "# Separo los datos de Meli\n",
     "datos_meli = datos[(datos['type_meli'] == 1)] \n",
-    "datos_meli = datos_meli.drop('type_kavak',axis=1)\n",
     "datos_meli = datos_meli.drop('type_meli',axis=1)"
    ]
   },
@@ -115,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MODELO DE REGRESION - Logaritmo de Precio (Base)"
+    "MODELO DE REGRESION - Base"
    ]
   },
   {
@@ -218,31 +211,8 @@
    ],
    "source": [
     "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_test, y_pred)/1000,2))\n",
-    "\n",
-    "# MAE: Mean Absolute Error: 1.03 --> Con outliers\n",
-    "# MAE: Mean Absolute Error: 0.56 --> Sin ourliers\n",
-    "# Mean Absolute Error: 0.48 --> Aplicando LN a Precio (error)\n",
-    "# Mean Absolute Error: 0.86\n",
-    "\n",
     "print('Mean Squared Error:', round(metrics.mean_squared_error(y_test, y_pred)/1000,2))\n",
-    "# MSE: Mean Squared Error: 3,732,143.07\n",
-    "# MSE: Mean Squared Error: 6,599,540.41 --> Con LN  \n",
-    "\n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))\n",
-    "# Root Mean Squared Error: 1.93\n",
-    "# Root Mean Squared Error: 0.74\n",
-    "# Root Mean Squared Error: 2.57 --> Con LN\n",
-    "\n",
-    "\n",
-    "# Con Api\n",
-    "# Mean Absolute Error: 0.42\n",
-    "# Mean Squared Error: 405827.91\n",
-    "# Root Mean Squared Error: 0.64\n",
-    "\n",
-    "# Con API New\n",
-    "# Mean Absolute Error: 668.52\n",
-    "# Mean Squared Error: 7513732110.61\n",
-    "# Root Mean Squared Error: 2741.12\n"
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))"
    ]
   },
   {
@@ -290,110 +260,8 @@
     "y_pred = np.exp(y_pred_ln)\n",
     "\n",
     "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_test, y_pred)/1000,2))\n",
-    "\n",
     "print('Mean Squared Error:', round(metrics.mean_squared_error(y_test, y_pred)/1000,2))\n",
-    "\n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))\n",
-    "\n",
-    "\n",
-    "# Mean Absolute Error: 331.45\n",
-    "# Mean Squared Error: 274555797.78\n",
-    "# Root Mean Squared Error: 523.98\n",
-    "\n",
-    "# Con api New\n",
-    "# Mean Absolute Error: 494.75\n",
-    "# Mean Squared Error: 7094414830.74\n",
-    "# Root Mean Squared Error: 2663.53"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Medimos los datos de Kavak"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "####################################################\n",
-    "#### Prueba de datos de Kavak\n",
-    "#%%\n",
-    "# Separo en Y y X\n",
-    "datos_kavak = datos[(datos['type_kavak'] == 1)] \n",
-    "datos_kavak = datos_kavak.drop('type_kavak',axis=1)\n",
-    "datos_kavak = datos_kavak.drop('type_meli',axis=1)\n",
-    "\n",
-    "#separate the other attributes from the predicting attribute\n",
-    "x_kavak = datos_kavak.drop('price',axis=1)\n",
-    "\n",
-    "#separte the predicting attribute into Y for model training \n",
-    "y_kavak = datos_kavak['price']\n",
-    "\n",
-    "# Predigo las x_kavak\n",
-    "y_pred_kavak_ln = model_ln.predict(x_kavak)\n",
-    "\n",
-    "#  Saco exponencial de los valores de Y\n",
-    "y_pred_kavak = np.exp(y_pred_kavak_ln)\n",
-    "\n",
-    "#print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "#print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "#print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n",
-    "# Mean Absolute Error: 3030.07\n",
-    "# Mean Squared Error: 10459841498.76\n",
-    "# Root Mean Squared Error: 3234.17\n",
-    "\n",
-    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error: 688.24\n",
-      "Mean Squared Error: 755715179.67\n",
-      "Root Mean Squared Error: 869.32\n"
-     ]
-    }
-   ],
-   "source": [
-    "####################################################\n",
-    "#### Prueba de datos de Kavak\n",
-    "#%%\n",
-    "# Separo en Y y X\n",
-    "datos_kavak = datos[(datos['type_kavak'] == 1)] \n",
-    "datos_kavak = datos_kavak.drop('type_kavak',axis=1)\n",
-    "datos_kavak = datos_kavak.drop('type_meli',axis=1)\n",
-    "\n",
-    "#separate the other attributes from the predicting attribute\n",
-    "x_kavak = datos_kavak.drop('price',axis=1)\n",
-    "\n",
-    "#separte the predicting attribute into Y for model training \n",
-    "y_kavak = datos_kavak['price']\n",
-    "\n",
-    "# Predigo las x_kavak\n",
-    "y_pred_kavak = model.predict(x_kavak)\n",
-    "\n",
-    "#print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "#print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "#print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n",
-    "# Mean Absolute Error: 3030.07\n",
-    "# Mean Squared Error: 10459841498.76\n",
-    "# Root Mean Squared Error: 3234.17\n",
-    "\n",
-    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))"
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))"
    ]
   }
  ],
