--- a/modelo_RegresionLineal (scraper).ipynb
+++ b/modelo_RegresionLineal (scraper).ipynb
@@ -92,19 +92,14 @@
     "datos_meli = pd.read_excel('data_ready_to_model.xlsx')\n",
     "datos_meli['type'] = 'meli' \n",
     "\n",
-    "\n",
-    "datos_kavak = pd.read_excel('base_kavak_scraper.xlsx')\n",
-    "datos_kavak['type'] = 'kavak' \n",
-    "\n",
     "# Uno los DF\n",
     "\n",
-    "frames = [datos_meli, datos_kavak]\n",
+    "frames = [datos_meli, datos_privadis]\n",
     "datos = pd.concat(frames)\n",
     "\n",
     "datos = one_hot_encoder(datos,100)\n",
     "datos_meli = datos[(datos['type_meli'] == 1)] \n",
-    "datos_meli = datos_meli.drop('type_kavak',axis=1)\n",
-    "datos_meli = datos_meli.drop('type_meli',axis=1)\n"
+    "datos_meli = datos_meli.drop('type_meli',axis=1)"
    ]
   },
   {
@@ -151,22 +146,8 @@
     "\n",
     "# MIramos los resultados\n",
     "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_test, y_pred)/1000,2))\n",
-    "# MAE: Mean Absolute Error: 1.03 --> Con outliers\n",
-    "# MAE: Mean Absolute Error: 0.56 --> Sin ourliers\n",
-    "# Mean Absolute Error: 0.48 --> Aplicando LN a Precio (error)\n",
-    "# Mean Absolute Error: 0.86\n",
-    "\n",
     "print('Mean Squared Error:', round(metrics.mean_squared_error(y_test, y_pred)/1000,2))\n",
-    "# MSE: Mean Squared Error: 3,732,143.07\n",
-    "# MSE: Mean Squared Error: 6,599,540.41 --> Con LN   \n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))\n",
-    "# Root Mean Squared Error: 1.93\n",
-    "# Root Mean Squared Error: 0.74\n",
-    "# Root Mean Squared Error: 2.57 --> Con LN\n",
-    "\n",
-    "# Mean Absolute Error: 986.07\n",
-    "# Mean Squared Error: 9214867036.52\n",
-    "# Root Mean Squared Error: 3035.6\n"
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))"
    ]
   },
   {
@@ -248,116 +229,10 @@
     "y_pred = np.exp(y_pred_ln)\n",
     "\n",
     "# MIramos los resultados\n",
+    "\n",
     "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_test, y_pred)/1000,2))\n",
-    "# MAE: Mean Absolute Error: 1.03 --> Con outliers\n",
-    "# MAE: Mean Absolute Error: 0.56 --> Sin ourliers\n",
-    "# Mean Absolute Error: 0.48 --> Aplicando LN a Precio (error)\n",
-    "# Mean Absolute Error: 0.86\n",
-    "\n",
     "print('Mean Squared Error:', round(metrics.mean_squared_error(y_test, y_pred)/1000,2))\n",
-    "# MSE: Mean Squared Error: 3,732,143.07\n",
-    "# MSE: Mean Squared Error: 6,599,540.41 --> Con LN   \n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))\n",
-    "# Root Mean Squared Error: 1.93\n",
-    "# Root Mean Squared Error: 0.74\n",
-    "# Root Mean Squared Error: 2.57 --> Con LN\n",
-    "\n",
-    "# Mean Absolute Error: 882.04\n",
-    "# Mean Squared Error: 9169557311.54\n",
-    "# Root Mean Squared Error: 3028.13"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Medimos los datos de Kavak"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error: 970.81\n",
-      "Mean Squared Error: 1423226783.82\n",
-      "Root Mean Squared Error: 1192.99\n"
-     ]
-    }
-   ],
-   "source": [
-    "####################################################\n",
-    "#### Prueba de datos de Kavak\n",
-    "#%%\n",
-    "# Separo en Y y X\n",
-    "datos_kavak = datos[(datos['type_kavak'] == 1)] \n",
-    "datos_kavak = datos_kavak.drop('type_kavak',axis=1)\n",
-    "datos_kavak = datos_kavak.drop('type_meli',axis=1)\n",
-    "\n",
-    "#separate the other attributes from the predicting attribute\n",
-    "x_kavak = datos_kavak.drop('precio',axis=1)\n",
-    "\n",
-    "#separte the predicting attribute into Y for model training \n",
-    "y_kavak = datos_kavak['precio']\n",
-    "\n",
-    "# Predigo las x_kavak\n",
-    "y_pred_kavak = model.predict(x_kavak)\n",
-    "\n",
-    "# Resultados de base\n",
-    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error: 817.05\n",
-      "Mean Squared Error: 1153609423.99\n",
-      "Root Mean Squared Error: 1074.06\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Predigo las x_kavak\n",
-    "y_pred_kavak_ln = model_ln.predict(x_kavak)\n",
-    "\n",
-    "#  Saco exponencial de los valores de Y\n",
-    "y_pred_kavak = np.exp(y_pred_kavak_ln)\n",
-    "\n",
-    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_kavak = pd.DataFrame(y_kavak)\n",
-    "df_kavak\n",
-    "\n",
-    "df_pred = pd.DataFrame(y_pred_kavak, columns = ['y_pred'])\n",
-    "df_pred\n",
-    "\n",
-    "frames = [df_kavak, df_pred, x_kavak]\n",
-    "data_regresion = pd.concat(frames, axis = 1)\n",
-    "\n",
-    "data_regresion\n",
-    "\n",
-    "data_regresion.to_excel('data_analisis_regresion.xlsx', index=False)"
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))\n"
    ]
   }
  ],
