--- a/data_description_analisis (scraper).ipynb
+++ b/data_description_analisis (scraper).ipynb
@@ -266,8 +266,7 @@
     "precio_mod_bar.set_xlabel(\"Precio promedio\")\n",
     "precio_mod_bar.set_title(\"Precio promedio por localidad\",\n",
     "                  fontsize=16, weight=\"bold\")\n",
-    "plt.show()\n",
-    "# %%"
+    "plt.show()\n"
    ]
   }
  ],
